# scrutinize

./: .tool-versions  README.md  experiment.py  pyproject.toml
scrutinize/: config_rt_vehicle.py  gtfs_rt_detail.py  main.py  validators.py
scrutinize/pb/: gtfs_realtime_pb2.py
