[project]
name = "scrutinize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "protobuf>=6.32.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "marimo>=0.16.3",
]
